Added column element, flex-grow, justify-content, align-items, width and height styles, added support for copying and deleting elements

--- a/src/elements/base/template-block.html
+++ b/src/elements/base/template-block.html
@@ -2,8 +2,8 @@
     <div class="block-title block-container-inner">
     </div>
     <div class="block-buttons block-container-inner">
-        <button class="btn btn-default btn-update">
-            Update
+        <button class="btn btn-default btn-edit">
+            Edit
         </button>
 
         <button class="btn btn-default btn-copy">
